# One_Stop_Solution_Code

./: worklog.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/: admin_auth.py  config.py  dependencies.py  main.py
backend/app/config/: db.py  envConfig.py
backend/app/db/: database.py
backend/app/models/: __init__.py  admin_user.py  certification.py  consultation.py  contact_platform.py  enquiry.py  faq.py  portfolio.py  rating.py  record.py  resource.py  review.py  service.py  services.py  site_stats.py  team.py  team_member.py  user.py  visit.py
backend/app/routes/: __init__.py  admin_users.py  auth.py  certifications.py  chatbot.py  consultations.py  contact_platforms.py  dashboard.py  enquiries.py  faqs.py  ratings.py  resources.py  seed.py  services.py  stats.py  team_members.py  uploads.py  users.py  visits.py
backend/app/schemas/: __init__.py  admin_user.py  auth.py  certification.py  chatbot.py  consultation.py  contact_platform.py  dashboard.py  enquiry.py  faq.py  portfolio_item.py  rating.py  reorder.py  resource.py  service.py  site_stats.py  sub_service.py  team_member.py  upload.py  user.py
backend/app/services/: __init__.py  admin_user_service.py  auth_service.py  certification_service.py  chatbot_service.py  consultation_service.py  contact_platform_service.py  country_flag.py  dashboard_service.py  enquiry_service.py  faq_service.py  notification_service.py  rating_service.py  resource_service.py  (+9 more)
backend/onestopsolution/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
(+87 files in other folders)
